# robots

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  debug.rviz  docker-compose.yml
.github/workflows/: coverage.yml  frontend-ci.yml  robot-ci.yml  scripts-ci.yml  station-ci.yml
frontend/: .env  .eslintrc.js  Dockerfile  README.md  jest.config.js  package-lock.json  package.json
frontend/.storybook/: main.js  preview.js
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/factories/: ColorFactory.ts  CoordinateFactory.ts  CornerFactory.ts  PuckFactory.ts  PuckListFactory.ts  PuckStateFactory.ts  StateFactory.ts
robot/: .pylintrc  Dockerfile  README.md  requirements.txt
robot/ina/: CMakeLists.txt  package.xml
robot/ina/src/: main  (+1 more)
robot/letter_reading/: CMakeLists.txt  capture_image_from_embed_camera.py  letter_mapping.py  main  map_letters.py  package.xml  process_image_to_grayscale.py
robot/motor_driver/: CMakeLists.txt  main  package.xml
robot/motor_driver/launch/: motor.launch
robot/red_light_driver/: CMakeLists.txt  package.xml
scripts/: .pylintrc  Dockerfile  README.md  requirements.txt
station/: .pylintrc  Dockerfile  README.md  pytest.ini  requirements.txt
station/controller/: CMakeLists.txt  main  mock_robot_consumption.py  mock_start_cycle.py  package.xml  utils.py
station/debug_vision_planning/: CMakeLists.txt  main  package.xml
station/path_following/: CMakeLists.txt  main  package.xml
station/path_planning/: CMakeLists.txt  check_map_state.py  main  mock_publisher.py  package.xml  robot_directions.py
station/robot_goal_and_obstacle_finder/: CMakeLists.txt  main  package.xml  setup_table.py
station/robot_goal_and_obstacle_finder/detection/: color_boundaries.py  dimension_convertor.py  lower_boundary.py  object_detection.py  position_calculator.py  puck_detection.py  square_detection.py  table_detection.py  upper_boundary.py
station/robot_goal_and_obstacle_finder/detection/acuro_markers/: marker_position.py  obstacle_and_robot_finder.py  obstacle_detection.py  robot_detection.py
station/robot_goal_and_obstacle_finder/detection/hard_code_position/: hard_code_position.py  square_corner_detection.py
station/robot_goal_and_obstacle_finder/detection/utils/: stack_images.py
station/robot_goal_and_obstacle_finder/launch/: finder.launch
station/websockets/: CMakeLists.txt  main  mock_full_cycle.py  package.xml
station/world_camera_driver/: CMakeLists.txt  package.xml
station/world_camera_driver/launch/: camera.launch
(+212 files in other folders)
