<?xml version="1.0"?>
<package format="2">
  <name>robot_goal_and_obstacle_finder</name>
  <version>3.0.0</version>
  <description>The robot_goal_and_obstacle_finder package</description>

  <maintainer email="fabienroy28@gmail.com">Fabien Roy</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>